--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.30.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -33,7 +34,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
+    "@nestjs/cli": "^11.0.10",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
@@ -43,7 +44,7 @@
     "@types/passport-jwt": "^4.0.0",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^6.0.3",
-    "drizzle-kit": "^0.31.5",
+    "drizzle-kit": "^0.18.1",
     "jest": "^30.2.0",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.4",
