--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.0.0",
-    "@nestjs/passport": "^10.0.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.0.0",
     "bcrypt": "^5.1.0",
@@ -27,6 +27,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.30.0",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "postgres": "^3.4.7",
@@ -41,6 +42,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.0",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^6.0.3",
