minor adjsutment in darkmode and sign w/google(note keyboard shortcut needs not a signle letter cause it's not working)

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "type": "commonjs",
   "devDependencies": {
     "concurrently": "^9.2.1"
+  },
+  "dependencies": {
+    "next-auth": "^4.24.11"
   }
 }
