--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "concurrently": "^9.2.1"
   },
   "dependencies": {
+    "@radix-ui/react-switch": "^1.2.6",
+    "drizzle-kit": "^0.31.5",
+    "drizzle-orm": "^0.44.6",
     "next-auth": "^4.24.11"
   }
 }
