--- a/backend/package.json
+++ b/backend/package.json
@@ -22,10 +22,12 @@
     "@nestjs/platform-express": "^11.1.6",
     "@nestjs/swagger": "^11.2.0",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
+    "nodemailer": "^7.0.9",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
@@ -39,9 +41,11 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^11.1.6",
     "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
+    "@types/nodemailer": "^7.0.2",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.0",
     "@types/passport-local": "^1.0.34",
