--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "class-validator": "^0.14.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
+    "google-auth-library": "^10.4.2",
     "nodemailer": "^7.0.9",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
