--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^9.2.1"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-switch": "^1.2.6",
     "@sendgrid/mail": "^8.1.6",
     "bcryptjs": "^3.0.2",
